initial draft of a log viewer with highlighting

--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -225,6 +225,10 @@
 								</ToolTip.Tip>
 							</CheckBox>
 						</Border>
+
+            <!--
+            <Button Click="OpenLogViewerWindow" Content="Assd"></Button>
+            -->
 					</StackPanel>
 				</StackPanel>
 			</StackPanel>
