--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -563,6 +563,23 @@
 					</DataGridTemplateColumn>
 					<DataGridTemplateColumn>
 						<DataGridTemplateColumn.Header>
+							<Button Content="{Binding ElementName=WindowContext, Path=DataContext.Language.Columns.CopyTimeSeconds}" HorizontalAlignment="Left" Click="LogDataGridHeaderClick"></Button>
+						</DataGridTemplateColumn.Header>
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<StackPanel>
+									<ToolTip.Tip>
+										<StackPanel>
+											<TextBlock Text="{Binding ElementName=WindowContext, Path=DataContext.Language.Tooltips.CopyTimeSeconds}"></TextBlock>
+										</StackPanel>
+									</ToolTip.Tip>
+									<TextBlock Text="{Binding CopyTimeSeconds}" HorizontalAlignment="Right" ></TextBlock>
+								</StackPanel>
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+					<DataGridTemplateColumn>
+						<DataGridTemplateColumn.Header>
 							<Button Content="{Binding ElementName=WindowContext, Path=DataContext.Language.Columns.TotalSeconds}" HorizontalAlignment="Left" Click="LogDataGridHeaderClick"></Button>
 						</DataGridTemplateColumn.Header>
 						<DataGridTemplateColumn.CellTemplate>
