--- a/ChiaPlotStatusGUI/GUI/Views/MainWindow.axaml
+++ b/ChiaPlotStatusGUI/GUI/Views/MainWindow.axaml
@@ -508,6 +508,23 @@
 							</DataTemplate>
 						</DataGridTemplateColumn.CellTemplate>
 					</DataGridTemplateColumn >
+          <DataGridTemplateColumn>
+            <DataGridTemplateColumn.Header>
+              <Button Content="{Binding ElementName=WindowContext, Path=DataContext.Language.Columns.RunTimeSeconds}" HorizontalAlignment="Left" Click="LogDataGridHeaderClick"></Button>
+            </DataGridTemplateColumn.Header>
+            <DataGridTemplateColumn.CellTemplate>
+              <DataTemplate>
+                <StackPanel>
+                  <ToolTip.Tip>
+                    <StackPanel>
+                      <TextBlock Text="{Binding ElementName=WindowContext, Path=DataContext.Language.Tooltips.RunTimeSeconds}"></TextBlock>
+                    </StackPanel>
+                  </ToolTip.Tip>
+                  <TextBlock Text="{Binding RunTimeSeconds}" HorizontalAlignment="Right" ></TextBlock>
+                </StackPanel>
+              </DataTemplate>
+            </DataGridTemplateColumn.CellTemplate>
+          </DataGridTemplateColumn>
 					<DataGridTemplateColumn>
 						<DataGridTemplateColumn.Header>
 							<Button Content="{Binding ElementName=WindowContext, Path=DataContext.Language.Columns.CurrentPhase}" HorizontalAlignment="Left" Click="LogDataGridHeaderClick"></Button>
